--- a/Project1Afdemp/Project1Afdemp.csproj
+++ b/Project1Afdemp/Project1Afdemp.csproj
@@ -42,8 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Menus.cs" />
+    <Compile Include="PasswordHandling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadAndParse.cs" />
+    <Compile Include="StringsFormatted.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
