--- a/Project1Afdemp/Project1Afdemp.csproj
+++ b/Project1Afdemp/Project1Afdemp.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accessibility.cs" />
     <Compile Include="Menus.cs" />
     <Compile Include="PasswordHandling.cs" />
     <Compile Include="Program.cs" />
