Added Database for Users and Messages

--- a/Project1Afdemp/App.config
+++ b/Project1Afdemp/App.config
@@ -17,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name ="DatabaseStuff" connectionString="data source=.\SQLEXPRESS; initial catalog=Project1Afdemp; integrated security=SSPI" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
