--- a/Project1Afdemp/Project1Afdemp.csproj
+++ b/Project1Afdemp/Project1Afdemp.csproj
@@ -56,16 +56,28 @@
     <Compile Include="Accessibility.cs" />
     <Compile Include="DatabaseStuff.cs" />
     <Compile Include="Menus.cs" />
+    <Compile Include="Message.cs" />
+    <Compile Include="Migrations\201803290846065_CreateUsersAndMessages.cs" />
+    <Compile Include="Migrations\201803290846065_CreateUsersAndMessages.Designer.cs">
+      <DependentUpon>201803290846065_CreateUsersAndMessages.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PasswordHandling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadAndParse.cs" />
     <Compile Include="StringsFormatted.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201803290846065_CreateUsersAndMessages.resx">
+      <DependentUpon>201803290846065_CreateUsersAndMessages.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
