fixes issue of duplicate entries in users.

--- a/Project1Afdemp/App.config
+++ b/Project1Afdemp/App.config
@@ -8,16 +8,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework">
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name ="DatabaseStuff" connectionString="data source=.\SQLEXPRESS; initial catalog=Project1Afdemp; integrated security=SSPI" providerName="System.Data.SqlClient"/>
-  </connectionStrings>
 </configuration>
