adds automatic migrations and removes manual ones

--- a/Project1Afdemp/Project1Afdemp.csproj
+++ b/Project1Afdemp/Project1Afdemp.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -57,20 +72,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accessibility.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Objects\ChatMessage.cs" />
     <Compile Include="DatabaseStuff.cs" />
     <Compile Include="Functions\MenuFunctions.cs" />
     <Compile Include="Functions\Menus.cs" />
     <Compile Include="Objects\Message.cs" />
-    <Compile Include="Migrations\201804071607044_FirstMigration.cs" />
-    <Compile Include="Migrations\201804071607044_FirstMigration.Designer.cs">
-      <DependentUpon>201804071607044_FirstMigration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201804071835078_UnreadMessages.cs" />
-    <Compile Include="Migrations\201804071835078_UnreadMessages.Designer.cs">
-      <DependentUpon>201804071835078_UnreadMessages.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Functions\PasswordHandling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -89,15 +96,19 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201804071607044_FirstMigration.resx">
-      <DependentUpon>201804071607044_FirstMigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201804071835078_UnreadMessages.resx">
-      <DependentUpon>201804071835078_UnreadMessages.cs</DependentUpon>
-    </EmbeddedResource>
+    <Content Include="afdemp_project.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="afdemp_project.ico" />
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
