--- a/Project1Afdemp/packages.config
+++ b/Project1Afdemp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Dapper" version="1.50.4" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="ILMerge" version="2.14.1208" targetFramework="net461" />
 </packages>
