--- a/Project1Afdemp/Project1Afdemp.csproj
+++ b/Project1Afdemp/Project1Afdemp.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Accessibility.cs" />
     <Compile Include="Functions\ChatFunctions.cs" />
+    <Compile Include="Functions\PersonalMessageFunctions.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Objects\ChatMessage.cs" />
     <Compile Include="DatabaseStuff.cs" />
@@ -80,7 +81,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Functions\ReadAndParse.cs" />
-    <Compile Include="Functions\SideFunctions.cs" />
+    <Compile Include="Functions\ManageUserFunctions.cs" />
     <Compile Include="StringsFormatted.cs" />
     <Compile Include="Objects\User.cs" />
     <Compile Include="Objects\UserManager.cs" />
